# transcriptor

./: .env.example  .gitignore  MIGRATION_PLAN.md  README.md  SYSTEM_SPECIFICATION.md  _200_month Cursor Ultra or Claude Code Max__qa.md  format_summary.py  get_audio_youtube.py  get_info_transcript.py  get_transcript_youtube.py  get_youtube.py  pyproject.toml  qna_youtube.py  requirements.txt  summary.md  transcriptor.py  transcriptor_documented.py  utils.py  yt_transcriber_chunked.py
qa_sessions/: 1JKCSe3lU2k_qa.json  YfWiklTpPqE_Terence_Tao_on_Andrew_Wiles_proving_Fermats_Last_T_qa.json
