[project]
name = "transcriptor"
version = "0.1.0"
description = "YouTube transcriber with AI summaries and Q&A"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "youtube-transcript-api==0.6.2",
    "click==8.1.7",
    "anthropic==0.39.0",
    "openai==1.54.0",
    "httpx<0.28",
    "python-dotenv==1.0.1",
    "rich==13.9.4",
    "yt-dlp>=2024.10.7",
    "pydub>=0.25.1",
]

[project.scripts]
yt-transcriber = "transcriptor:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
  "transcriptor.py",
]


